# my_app_flutter_and_rust

./: README.md  pubspec.yaml
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner.xcodeproj/: project.pbxproj
lib/: flutter_photon_rs.dart  main.dart  vips_rs.dart
lib/model/: flutter_photon_rs.dart  util.dart
lib/model/filters/: channel.dart  channel.freezed.dart  colour_space.dart  colour_space.freezed.dart  convolution.dart  convolution.freezed.dart  effect.dart  effect.freezed.dart  filter.dart  monochrome.dart  monochrome.freezed.dart  multiple.dart  multiple.freezed.dart  preset_filter.dart  preset_filter.freezed.dart  tint.dart  tint.freezed.dart  transform.dart  transform.freezed.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: api.dart  simple.dart  vips_api.dart
lib/widgets/: filter_list.dart  image_memory_with_loading.dart  preview_buttom.dart
linux/flutter/: generated_plugins.cmake
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: api.rs  mod.rs  vips_api.rs
rust_builder/cargokit/build_tool/lib/src/: build_pod.dart  target.dart
windows/flutter/: generated_plugins.cmake
