[package]
name = "rust_lib_my_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.37"
anyhow = { version = "1.0.86", features = ["backtrace"] }
image = "0.25.1"
img-parts = "0.3.0"
# libvips = "1.7.0"
libvips-rs = "8.15.1"

[profile.release]
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
